[package]
name = "url-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "socks","stream"], default-features = false }
regex = "1.11.1"
futures-util = "0.3.31"
http-body-util = "0.1.3"
